# 6502_emulator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: CPU.h  Memory.h  addressing.h  instructions.h  utils.h
src/: CMakeLists.txt  CPU.cpp  addressing.cpp  instructions.cpp
test/: CMakeLists.txt  test.cpp  test_ASL.cpp  test_adc.cpp  test_and.cpp  test_bit.cpp  test_branch.cpp  test_lda.cpp  test_ldx.cpp  test_ldy.cpp  test_status.cpp
